terraform/modules/nginx_server/main.tf
# @component TerraformAWS:VPC:NACl_Proxy:Subnet_Proxy:Security_Group_Proxy:EC2_Instance_Proxy (#ec2_proxy)
# @connects #sg_proxy to #ec2_proxy with SSH,HTTP,HTTP
# @connects #ec2_proxy to #sg_proxy with HTTP,HTTPs,SQL
# Nginx Server
resource "aws_instance" "cyber94_vulnerability_scanner_nginx"{
  ami = "ami-0943382e114f188e8"
  instance_type = "t2.micro"
  key_name = "cyber94-bdeadfield"
  associate_public_ip_address = true
  subnet_id = var.var_nginx_subnet_id

  vpc_security_group_ids = [aws_security_group.cyber94_vulnerability_scanner_sg_nginx_tf.id]

  tags = {
    Name = "cyber94_vulnerability_scanner_nginx"
  }

  connection {
    type = "ssh"
    user = "ubuntu"
    host = self.public_ip
    private_key = file("/home/kali/.ssh/cyber94-bdeadfield.pem")
  }

  provisioner "remote-exec"{
    inline = [
      "pwd"
    ]
  }

provisioner "local-exec" {
  working_dir = "../ansible"
  command = "ansible-playbook -i ${self.public_ip}, -u ubuntu nginx_playbook.yml"
  }
}

# @component TerraformAWS:VPC:NACl_Proxy:Subnet_Proxy:Security_Group_Proxy (#sg_proxy)
# @connects #subnet_proxy to #sg_proxy with SSH,HTTP,HTTPs,Ephemeral
# @connects #sg_proxy to #subnet_proxy with SSH,HTTP,HTTPs,Ephemeral
# Nginx Security Group
resource "aws_security_group" "cyber94_vulnerability_scanner_sg_nginx_tf"{
  name = "cyber94_vulnerability_scanner_sg_nginx"
  description = "Allow Web inbound traffic"
  vpc_id = var.var_aws_vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "5000"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "HTTP"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cyber94_vulnerability_scanner_sg_nginx"
  }
}
